<resources>
    <string name="app_name">Quản lý nhà hàng</string>
    <string name="ban_hang">Phục vụ</string>
    <string name="home">Trang chủ</string>
    <string name="quan_ly">Quản lý</string>
    <string name="thong_ke">Thống kê</string>
    <string name="kho_nvl">Kho-NVL</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="da_dat_truoc">Đã đặt trước</string>
    <string name="dang_phuc_vu">Đang phục vụ</string>
    <string name="loading">Đợi tẹo...</string>
    <string name="trong">Trống</string>
    <string name="so_luong">Số lượng</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trang_thai">Trạng thái:</string>
    <string name="gio_den">Giờ đến:</string>
    <string name="gio_den_hint">Giờ đến</string>
    <string name="tong_tien">Tổng tiền:</string>
    <string name="dat_ban">Đặt bàn</string>
    <string name="huy_dat_ban">Hủy đặt</string>
    <string name="thuc_don">Thực đơn</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sale">sale</string>
    <string name="tinh_tien">Tính tiền</string>
    <string name="error">Đã xảy ra lỗi</string>
    <string name="gap_loi">Gặp lỗi khi tải dữ liệu !</string>
    <string name="tai_lai">Tải lại</string>
    <string name="huy_ban">Hủy bàn</string>
    <string name="tien_khach_dua">Tiền khách đưa</string>
    <string name="tien_mon">Tiền món:</string>
    <string name="tien_giam_gia">Tiền giảm giá:</string>
    <string name="tien_tra_lai">Tiền trả lại:</string>
    <string name="ten_khach_hang">Tên khách hàng</string>
    <string name="info_ten_khach_hang">Tên khách hàng:</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="yeu_cau">Yêu cầu</string>
    <string name="nhap_ten_khach_hang">Nhập tên khách hàng</string>
    <string name="nhap_so_dien_thoai">Nhập số điện thoại</string>
    <string name="nhap_gio_den">Nhập giờ đến</string>
    <string name="pv_notify_dat_ban">%s: đặt bàn</string>
    <string name="pv_notify_order_mon">%1$s: +%2$d %3$s</string>
    <string name="pv_notify_order_mon_kh">%1$s: thêm món</string>
    <string name="pv_notify_delete_mon_order">%1$s: hủy order - %2$s</string>
    <string name="pv_notify_hoa_don_moi">Hóa đơn mới - %1$s: +%2$d %3$s</string>
    <string name="pv_notify_hoa_don_moi_kh">Hóa đơn mới - %1$s</string>
    <string name="pv_notify_sale">%1$s: giảm giá - %2$d%%</string>
    <string name="pv_notify_huy_ban">%s: hủy bàn</string>
    <string name="pv_notify_tinh_tien">Tính tiền - %1$s: %2$s</string>
    <string name="info_so_dien_thoai">Số điện thoại:</string>
    <string name="info_khoang_gio_den">Khoảng giờ đến:</string>
    <string name="info_yeu_cau">Yêu cầu:</string>
    <string name="info_thong_tin_dat_ban">Thông tin đặt bàn:</string>
    <string name="thong_tin_dat_ban">Thông tin đặt bàn</string>
    <string name="sua_thong_tin">Sửa thông tin</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="pv_notify_update_dat_ban">%s: cập nhật thông tin đặt bàn</string>
    <string name="huy_order">Hủy món: %s ?</string>
    <string name="thong_bao">Thông báo</string>
    <string name="dong">Đóng</string>
    <string name="kiem_tra_ket_noi_mang">Kiểm tra kết nối mạng !</string>
    <string name="them_moi">Thêm mới</string>
    <string name="danh_sach_dat_ban">Danh sách đặt bàn</string>
    <string name="dat_truoc">Đặt trước</string>
    <string name="dong_y">Đồng ý</string>
    <string name="huy">Hủy</string>
    <string name="dat_ban_that_bai">Đặt bàn thất bại !</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="ban_co_muon_huy_dat_ban">Bạn có muốn huỷ đặt bàn ?</string>
    <string name="huy_dat_ban_that_bai">Huỷ đặt bàn thất bại !</string>
    <string name="cap_nhat_dat_ban_that_bai">Cập nhật đặt bàn thất bại !</string>
    <string name="info_chon_ban">Chọn bàn:</string>
    <string name="da_xay_ra_loi">Đã xảy ra lỗi !</string>
    <string name="khach_hang_dat_ban">Khách hàng đặt bàn</string>
    <string name="khach_hang_huy_dat_ban">Khách hàng huỷ đặt bàn</string>
    <string name="update_dat_ban">Cập nhật thông tin đặt bàn</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="ghi_nho_dang_nhap">Ghi nhớ đăng nhập</string>
    <string name="dang_nhap_that_bai">Đăng nhập thất bại !</string>
    <string name="nhap_mat_khau">Nhập mật khẩu</string>
    <string name="nhap_ten_dang_nhap">Nhập tên đăng nhập</string>
    <string name="other_people_login">Tài khoản bị đăng nhập từ nơi khác !</string>
    <string name="khach_vao_ban">Khách vào bàn</string>
    <string name="quan_ly_tin_tuc">Quản lý tin tức</string>
    <string name="quan_ly_ban">Quản lý bàn</string>
    <string name="quan_ly_thuc_don">Quản lý thực đơn</string>
    <string name="quan_ly_nhan_vien">Quản lý nhân viên</string>
    <string name="quan_ly_loai_mon">Quản lý loại món</string>
    <string name="thay_doi_mat_khau">Thay đổi mật khẩu</string>
    <string name="mat_khau_cu">Mật khẩu cũ</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="nhap_mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="mat_khau_khong_khop">Mật khẩu không khớp</string>
    <string name="thay_doi_mat_khau_thanh_cong">Thay đổi mật khẩu thành công !</string>
    <string name="mat_khau_khong_dung">Mật khẩu không đúng</string>
    <string name="thay_doi_mat_khau_that_bai">Thay đổi mật khẩu thất bại !</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="danh_sach_tin_tuc">Danh sách tin tức</string>
    <string name="tai_danh_sach_tin_tuc_that_bai">Tải danh sách tin tức thất bại !</string>
    <string name="danh_sach_ban">Danh sách bàn</string>
    <string name="danh_sach_thuc_don">Danh sách thực đơn</string>
    <string name="danh_sach_loai_mon">Danh sách loại món</string>
    <string name="danh_sach_nhan_vien">Danh sách nhân viên</string>
    <string name="tieu_de">Tiêu đề</string>
    <string name="noi_dung">Nội dung</string>
    <string name="hien_thi">Hiển thị</string>
    <string name="chon_hinh">Chọn hình</string>
    <string name="nhap_noi_dung">Nhập nội dung</string>
    <string name="nhap_tieu_de">Nhập tiêu đề</string>
    <string name="them_tin_tuc_thanh_cong">Thêm tin tức mới thành công</string>
    <string name="them_tin_tuc_that_bai">Thêm tin tức thất bại !</string>
    <string name="xoa_tin_tuc_that_bai">Xoá tin tức thất bại !</string>
    <string name="xac_nhan_xoa_tin_tuc">Bạn có muốn xoá tin ?</string>
    <string name="ngay_dang">Ngày đăng</string>
    <string name="nhap_ngay_dang">Nhập ngày đăng</string>
    <string name="update_tin_tuc_that_bai">Cập nhật tin tức thất bại !</string>
    <string name="quan_ly_khach_hang">Quản lý khách hàng</string>
    <string name="danh_sach_khach_hang">Danh sách khách hàng</string>
    <string name="khach_hang_yeu_cau">Khách hàng yêu cầu</string>
    <string name="hoa_don_moi">Hoá đơn mới</string>
    <string name="info_mon_yeu_cau">Món yêu cầu:</string>
    <string name="chon_ban_khac">Chọn bàn khác !</string>
    <string name="yeu_cau_them_mon">Yêu cầu thêm món</string>
    <string name="yeu_cau_tinh_tien">Yêu cầu tính tiền</string>
    <string name="ten_mon">Tên món</string>
    <string name="don_gia">Đơn giá</string>
    <string name="don_vi_tinh">Đơn vị tính</string>
    <string name="nhap_so_luong">Nhập số lượng</string>
    <string name="nhap_don_vi_tinh">Nhập đơn vị tính</string>
    <string name="nhap_ten_mon">Nhập tên món</string>
    <string name="info_chon_nhom_mon">Chọn nhóm món:</string>
    <string name="xac_nhan_xoa_mon">Bạn có muốn xoá món</string>
    <string name="them_mon_that_bai">Thêm món thất bại !</string>
    <string name="xoa_mon_that_bai">Xoá món thất bại !</string>
    <string name="update_mon_that_bai">Cập nhật món thất bại !</string>
    <string name="thong_tin">Thông tin</string>
    <string name="info_so_luong_khach_hang">Số khách hàng đăng ký:</string>
    <string name="info_so_luong_hoa_don_thanh_toan">Số hoá đơn tính tiền:</string>
    <string name="info_so_luong_mon">Số lượng món:</string>
    <string name="info_so_luong_nhom_mon">Số lượng nhóm món:</string>
    <string name="info_tong_tien_thu_ve">Tổng tiền thu về:</string>
    <string name="info_so_luong_hoa_don_chua_thanh_toan">Số hoá đơn chưa tính tiền:</string>
    <string name="info_so_luong_dat_ban">Số lượng đặt trước:</string>
    <string name="info_so_luong_tin_tuc">Số tin tức:</string>
    <string name="mat_ket_noi_toi_may_chu">Mất kết nối tới máy chủ !</string>
</resources>
