<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thong_bao"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_notifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thong_tin_dat_ban"
        android:gravity="center"
        android:paddingTop="16dp"
        android:textColor="@color/colorTextInfo"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/CommonButton"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/btn_radius"
            android:text="@string/dong"/>
    </TableRow>
</LinearLayout>