<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    android:background="@color/colorBackgroudMain"
    tools:context="thanggun99.quanlynhahang.view.fragment.ManagerFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.3"
        android:orientation="vertical"
        android:background="@color/colorBackgroudFrame"
        android:layout_marginRight="@dimen/layout_padding"
        android:padding="@dimen/layout_padding"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_ql_tin_tuc"
            style="@style/CommonButton"
            android:drawableLeft="@drawable/ic_news"
            android:background="@drawable/menu_manager_button_background"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:paddingLeft="4dp"
            android:text="@string/quan_ly_tin_tuc"/>

        <Button
            android:id="@+id/btn_ql_thuc_don"
            style="@style/CommonButton"
            android:drawableLeft="@drawable/ic_food_and_drink"
            android:background="@drawable/menu_manager_button_background"
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:layout_height="36dp"
            android:layout_width="match_parent"
            android:text="@string/quan_ly_thuc_don"/>

        <Button
            android:id="@+id/btn_ql_loai_mon"
            style="@style/CommonButton"
            android:drawableLeft="@drawable/ic_loai_mon"
            android:background="@drawable/menu_manager_button_background"
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:layout_height="36dp"
            android:layout_width="match_parent"
            android:text="@string/quan_ly_loai_mon"/>

        <Button
            android:id="@+id/btn_ql_ban"
            style="@style/CommonButton"
            android:drawableLeft="@drawable/ic_table"
            android:background="@drawable/menu_manager_button_background"
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:layout_height="36dp"
            android:layout_width="match_parent"
            android:text="@string/quan_ly_ban"/>

        <Button
            android:id="@+id/btn_ql_khach_hang"
            style="@style/CommonButton"
            android:drawableLeft="@drawable/ic_customer"
            android:background="@drawable/menu_manager_button_background"
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:layout_height="36dp"
            android:layout_width="match_parent"
            android:text="@string/quan_ly_khach_hang"/>

        <Button
            android:id="@+id/btn_ql_nhan_vien"
            style="@style/CommonButton"
            android:drawableLeft="@drawable/ic_employee"
            android:background="@drawable/menu_manager_button_background"
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:layout_height="36dp"
            android:layout_width="match_parent"
            android:text="@string/quan_ly_nhan_vien"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:background="@color/colorBackgroudFrame"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/manager_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </LinearLayout>

</LinearLayout>
